@@ -15,6 +15,39 @@ Optimized, Social Sites: Facebook, Google+, Twitter, LinkedIn, Instagram, RSS Fe
 Pinterest, VK, Flickr, Vine, Multiple browsers support (IE 9, IE 10, IE 11, Chrome, Firefox, Opera, and
 Safari), Full-Width Page Template, Header and Footer Menu, Translation ready and much more.
 
+
+== How to Display the Homepage Slider ==
+
+1. Create a Static Front Page
+
+The slider is visualized ONLY when there is a static front page set for your website. So, the first step is:
+
+1.1. Login to your Admin Panel
+
+1.2. Navigate to Left Menu -> Settings -> Reading
+
+1.3. Select 'A static page (select below)', then choose pages for 'Homepage' and 'Posts page'
+
+1.4. Save changes
+
+Reference: https://codex.wordpress.org/Creating_a_Static_Front_Page
+
+2. Update Slider Settings
+
+2.1. Login to your Admin Panel
+
+2.2. Navigate to Left Menu -> Appearance -> Customize
+
+2.3. Open 'Slider' Section
+
+2.4. Check the 'Display Slider' checkbox
+
+2.5. Set Slider Images ('Slide # Image' fields) and Text ('Slide # Content' fields) for the different Slides
+
+2.6. Save Changes
+
+
+
 == Installation ==
 
 Manual installation:
